<resources>
    <string name="app_name">Calculator</string>

    <string name="dec">dec</string>
    <string name="hex">hex</string>
    <string name="oct">oct</string>
    <string name="bin">bin</string>

    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divide">/</string>
    <string name="btn_equals">=</string>
    <string name="btn_reset">C</string>
    <string name="btn_back">Erase one character.</string>
    <string name="btn_a">a</string>
    <string name="btn_b">b</string>
    <string name="btn_c">c</string>
    <string name="btn_d">d</string>
    <string name="btn_e">e</string>
    <string name="btn_f">f</string>
    <string name="non_zero">At zero can not divide.</string>
    <string name="nothing">You do not enter anything. Press C, and enter number.</string>

</resources>
