<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nanog.calculator.Calculator">

    <!-- Дисплей \/ -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            style="@style/top_btn"
            android:text="@string/dec"
            android:id="@+id/DEC_Btn" />

        <TextView
            style="@style/top_text"
            android:id="@+id/text1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            style="@style/top_btn"
            android:text="@string/hex"
            android:id="@+id/HEX_Btn" />

        <TextView
            style="@style/top_text"
            android:id="@+id/text2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            style="@style/top_btn"
            android:text="@string/oct"
            android:id="@+id/OCT_Btn" />

        <TextView
            style="@style/top_text"
            android:id="@+id/text3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            style="@style/top_btn"
            android:text="@string/bin"
            android:id="@+id/BIN_Btn" />

        <TextView
            style="@style/top_text"
            android:id="@+id/text4" />

    </LinearLayout>

    <!-- Клавиатура \/ -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/second_btn"
                android:text="@string/btn_a"
                android:id="@+id/btnA" />

            <Button
                style="@style/second_btn"
                android:text="@string/btn_b"
                android:id="@+id/btnB" />

            <Button
                style="@style/second_btn"
                android:text="@string/btn_c"
                android:id="@+id/btnC" />

            <Button
                style="@style/second_btn"
                android:text="@string/btn_d"
                android:id="@+id/btnD" />

            <Button
                style="@style/second_btn"
                android:text="@string/btn_e"
                android:id="@+id/btnE" />

            <Button
                style="@style/second_btn"
                android:text="@string/btn_f"
                android:id="@+id/btnF" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/first_btn"
                android:text="@string/btn_seven"
                android:id="@+id/btnSeven" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_four"
                android:id="@+id/btnFour" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_one"
                android:id="@+id/btnOne" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_reset"
                android:id="@+id/btnReset" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/first_btn"
                android:text="@string/btn_eight"
                android:id="@+id/btnEight" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_five"
                android:id="@+id/btnFive" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_two"
                android:id="@+id/btnTwo" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_zero"
                android:id="@+id/btnZero" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/first_btn"
                android:text="@string/btn_nine"
                android:id="@+id/btnNine" />

            <Button
                style="@style/first_btn"
                android:layout_weight="1"
                android:text="@string/btn_six"
                android:id="@+id/btnSix" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_three"
                android:id="@+id/btnThree" />

            <ImageButton
                style="@style/first_btn"
                android:id="@+id/btnBack"
                android:src="@drawable/backspase_btn"
                android:contentDescription="@string/btn_back" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                style="@style/first_btn"
                android:text="@string/btn_divide"
                android:id="@+id/btnDivide" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_multiply"
                android:id="@+id/btnMultiply" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_minus"
                android:id="@+id/btnMinus" />

            <Button
                style="@style/first_btn"
                android:text="@string/btn_plus"
                android:id="@+id/btnPlus" />

            <Button
                style="@style/second_btn"
                android:text="@string/btn_equals"
                android:id="@+id/btnEquals"
                android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
